# face-gallery

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: README.md  api.spec  pyproject.toml
backend/models/buffalo_l/: .gitkeep
backend/scripts/: build-sidecar.ps1  dev.ps1
backend/src/face_gallery/: __init__.py  config.py  main.py
backend/src/face_gallery/api/: deps.py  job_mapping.py  library_mapping.py  queries.py
backend/src/face_gallery/api/routes/: health.py  jobs.py  libraries.py  persons.py  thumbs.py
backend/src/face_gallery/db/: connection.py  retry.py  schema.sql
backend/src/face_gallery/ml/: insightface_app.py  model_setup.py
backend/src/face_gallery/models/: job.py  person.py  photo.py
backend/src/face_gallery/services/: clusterer.py  embedder.py  indexer.py  job_runner.py  person_builder.py  queue_worker.py  thumbnail.py
backend/tests/: test_health.py  test_jobs_queue.py  test_model_setup.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/composables/: useApi.ts  useScanProgress.ts
frontend/src/router/: index.ts
frontend/src/stores/: apiHealth.ts  jobs.ts  library.ts  persons.ts  scan.ts
frontend/src/utils/: format.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+16 files in other folders)
