[package]
name = "face-gallery"
version = "0.1.0"
description = "Offline face photo organizer"
authors = ["mushitori"]
license = "MIT"
edition = "2021"

[lib]
name = "face_gallery_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
